# embed-doc-image

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
embed-doc-image-showcase/: Cargo.toml  README.md
embed-doc-image-showcase/src/: lib.rs
src/: lib.rs
