[package]
name = "embed-doc-image"
version = "0.1.1"
authors = ["Andreas Longva"]
edition = "2018"
description = "Embed images in Rust documentation"
license = "MIT"
documentation = "https://docs.rs/embed-doc-images"
homepage = "https://github.com/Andlon/embed-doc-images"
repository = "https://github.com/Andlon/embed-doc-images"
categories = ["development-tools", "rust-patterns"]
keywords = ["documentation", "rustdoc"]

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.72", default-features=false, features = ["full", "parsing", "proc-macro", "printing"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
base64 = "0.13"

[workspace]
members = [ "embed-doc-image-showcase" ]